# Fastapi_LMS

./: .gitignore  main.py  pyproject.toml
api/: courses.py  sections.py  users.py
